# ML_Framework

./: CMakeLists.txt  README.md
headers/: R3BCalifaNNHeaders.h  R3BCalifaTensorFilling.h  R3BNeuralNetHeaders.h  R3BNeuralNetStatisticalFunctions.h  califaNN_headers.h  find_position.h  headers.h  statistical_functions.h
macros/: check_class.cc  compile_root.cc  convolutions.cc  create_califa_matrix.C  get_id_matrix.C  print_events.C
macros/aux/: pca_califa.cc
models/: pca.cc
params/: .~lock.califa_table.csv#  .~lock.califa_table.ods#  califa_table.csv  califa_table.ods
python/macros/: mnist_parser.py  train_data.txt
python/python_course/: introduction.py  strings.py
sources/: R3BCalifaTensorFilling.cxx
